# Bifrost3D

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt  TODO.txt
apps/Komodo/: Blurer.cpp  Blurer.h  CMakeLists.txt  ColorGrader.cpp  ColorGrader.h  Compare.h  Comparer.h  Diff.h  ToneMapper.cpp  ToneMapper.h  Tonemapper.cpp  Tonemapper.h  Utils.h  main.cpp
apps/OptiXRendererTests/: CMakeLists.txt  EncodedNormalTest.h  Utils.h  main.cpp
apps/OptiXRendererTests/BSDFs/: GGXTest.h  LambertTest.h
apps/OptiXRendererTests/LightSources/: SphereLightTest.h
apps/OptiXRendererTests/ShadingModels/: DefaultShadingTest.h
apps/SimpleViewer/: CMakeLists.txt  CameraHandlers.cpp  CameraHandlers.h  CornellBoxScene.h  MaterialScene.h  OpacityScene.h  README.md  SphereLightScene.h  SphereScene.h  TestScene.h  VeachScene.h  main.cpp
apps/SimpleViewer/GUI/: RenderingGUI.cpp  RenderingGUI.h
apps/SimpleViewer/Resources/: Diamond.glb  Shaderball.gltf
apps/SimpleViewer/Scenes/: CornellBox.h  Glass.cpp  Glass.h  Material.cpp  Material.h  Opacity.h  Shaderball.glb  Sphere.cpp  Sphere.h  SphereLight.h  Test.h  Utils.cpp  Utils.h  Veach.h
apps/SmallPT/: CMakeLists.txt  main.cpp  smallpt.h  smallvpt.h
apps/Tests/: CMakeLists.txt  main.cpp
apps/Tests/Assets/: ImageTest.h  MaterialTest.h  MeshModelTest.h  MeshTest.h  TextureTest.h
apps/Tests/Core/: ArrayTest.h  UniqueIDGeneratorTest.h
apps/Tests/Input/: KeyboardTest.h
apps/Tests/Math/: MatrixTest.h  QuaternionTest.h  TransformTest.h
apps/Tests/Scene/: CameraTest.h  LightSourceTest.h  SceneNodeTest.h  TransformTest.h
apps/Vinci/: CMakeLists.txt  MaterialRandomizer.h  SceneGenerator.h  SceneSampler.h  TextureManager.h  main.cpp
cogs/AntTweakBar/: CMakeLists.txt  FindAntTweakBar.cmake
cogs/AntTweakBar/AntTweakBar/: AntTweakBar.cpp  AntTweakBar.h
cogs/Cogwheel/: CMakeLists.txt
cogs/Cogwheel/Core/: Array.h  Engine.cpp  Engine.h  IModule.h  Setup.cmake  Time.h  UniqueIDGenerator.h  UniqueIDGenerator.impl  Window.h
cogs/Cogwheel/Input/: Keyboard.h  Mouse.h  Setup.cmake
cogs/Cogwheel/Math/: Color.h  Constants.h  Conversions.h  FloatingPointColorOperators.h  Math.h  Matrix.h  Quaternion.h  Ray.h  Rect.h  Setup.cmake  Transform.h  Utils.h  Vector.h  VectorOperators.h
cogs/Cogwheel/Scene/: Camera.cpp  Camera.h  SceneNode.cpp  SceneNode.h  Setup.cmake
cogs/DX11Renderer/: CMakeLists.txt  FindDirectX11.cmake
cogs/DX11Renderer/DX11Renderer/: CameraEffects.cpp  CameraEffects.h  Compositor.cpp  Compositor.h  ConstantBufferArray.h  Defines.h  EnvironmentManager.cpp  EnvironmentManager.h  LightManager.h  MaterialManager.cpp  MaterialManager.h  OwnedResourcePtr.h  PrefixSum.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  TextureManager.cpp  TextureManager.h  ToneMapper.cpp  ToneMapper.h  Tonemapper.cpp  Tonemapper.h  TransformManager.cpp  TransformManager.h  Types.h  UniqueResourcePtr.h  Utils.h
cogs/DX12Renderer/: CMakeLists.txt  FindDirectX12.cmake
cogs/DX12Renderer/DX12Renderer/: Renderer.cpp  Renderer.h
cogs/GLFWDriver/: CMakeLists.txt  GLFWDriver.cpp  setup.cmake
cogs/GLFWDriver/src/: CMakeLists.txt  GLFWDriver.cpp  GLFWDriver.h
cogs/ImGui/: CMakeLists.txt
cogs/ImGui/ImGui/: ImGuiAdaptor.cpp  ImGuiAdaptor.h
cogs/ImageOperations/: CMakeLists.txt
cogs/ImageOperations/ImageOperations/: Blur.h  Compare.h  Diff.cpp  Diff.h  Exposure.cpp  Exposure.h
cogs/ObjLoader/: CMakeLists.txt
cogs/ObjLoader/ObjLoader/: ObjLoader.cpp  ObjLoader.h  tiny_obj_loader.h
cogs/OptiXRenderer/: CMakeLists.txt  FindOptiX.cmake
cogs/OptiXRenderer/OptiXRenderer/: Defines.h  Distributions.h  EncodedNormal.h  EnvironmentMap.cpp  EnvironmentMap.h  IBackend.h  Intersect.h  Kernel.cu  Kernel.h  OctahedralNormal.h  OctahedralUnit.h  PresampledEnvironmentMap.cpp  PresampledEnvironmentMap.h  RNG.h  Renderer - Copy.cpp  Renderer.cpp  Renderer.h  RhoTexture.cpp  RhoTexture.h  SPTD.cpp  SPTD.h  SPTDFit.cpp  SPTDFit.h  TBN.h  Types.h  Utils.h
cogs/StbImageLoader/: CMakeLists.txt
cogs/StbImageLoader/StbImageLoader/: StbImageLoader.cpp  StbImageLoader.h
cogs/StbImageWriter/: CMakeLists.txt
cogs/StbImageWriter/StbImageWriter/: StbImageWriter.cpp  StbImageWriter.h
cogs/Win32Driver/: CMakeLists.txt  Win32Driver.cpp  Win32Driver.h
extensions/AntTweakBar/: CMakeLists.txt  FindAntTweakBar.cmake
extensions/AntTweakBar/AntTweakBar/: AntTweakBar.cpp  AntTweakBar.h
extensions/Bifrost/: CMakeLists.txt
extensions/DX11OptiX7Adapter/: CMakeLists.txt
extensions/DX11OptiX7Adapter/DX11OptiXAdaptor/: Adaptor.cpp  Adaptor.h
extensions/DX11OptiXAdapter/: CMakeLists.txt
extensions/DX11OptiXAdapter/DX11OptiXAdaptor/: Adaptor.cpp  Adaptor.h
extensions/DX11Renderer/: CMakeLists.txt  FindDirectX11.cmake
extensions/DX11Renderer/DX11Renderer/: CameraEffects.cpp  CameraEffects.h  Compositor.cpp  Compositor.h  ConstantBufferArray.h  Defines.h  EnvironmentManager.cpp  EnvironmentManager.h  LightManager.h  MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  MeshModelManager.cpp  MeshModelManager.h  OwnedResourcePtr.h  PrefixSum.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  TransformManager.cpp  TransformManager.h  Types.h  Utils.cpp  Utils.h
extensions/GLFWDriver/: CMakeLists.txt  GLFWDriver.cpp  GLFWDriver.h
extensions/GLTFLoader/: CMakeLists.txt
extensions/GLTFLoader/GLTFLoader/: GLTFLoader.cpp  GLTFLoader.h
extensions/ImGui/: CMakeLists.txt
extensions/ImGui/ImGui/: ImGuiAdaptor.cpp  ImGuiAdaptor.h
extensions/OptiX7Renderer/: CMakeLists.txt  FindOptiX.cmake
extensions/OptiX7Renderer/OptiXRenderer/: CUDAUtils.h  Defines.h  PtxLoader.cpp  PtxLoader.h  PublicTypes.h  Renderer.cpp  Renderer.h  Types.h
extensions/OptiXRenderer/: CMakeLists.txt  FindOptiX.cmake
extensions/OptiXRenderer/OptiXRenderer/: Defines.h  Distributions.h  EnvironmentMap.cpp  EnvironmentMap.h  IBackend.cpp  IBackend.h  Intersect.h  Kernel.cu  Kernel.h  MonteCarlo.h  RNG.h  (+13 more)
extensions/StbImageLoader/: CMakeLists.txt
extensions/StbImageWriter/: CMakeLists.txt
(+557 files in other folders)
